Interpolator register improvements

--- a/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
@@ -1,88 +1,102 @@
 <div class="row">
-  <!-- bounding_rect -->
-  <div class="col-md-12">
-    <div class="col-md-6">
-      <div class="form-group">
+  <div class="col-md-12" style="padding-top: 20px">
+    <terrama2-box title="i18n.__('Strategy')" css="cssBoxSolid">
+      <div class="col-md-12">
+        <div class="col-md-6">
+          <div class="form-group" terrama2-show-errors>
+            <label>Interpolator strategy:</label>
+            <select class="form-control" name="interpolator_strategy" ng-model="inter.interpolator_strategy" required>
+              <option value="1">Nearest neighbor</option>
+              <option value="2">Average neighbor</option>
+              <option value="3">Weight average neighbor</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    
+      <div class="col-md-12">
+      </div>
+    
+      <div class="col-md-12">
+        <div class="col-md-6">
+          <div class="form-group" terrama2-show-errors>
+            <label>Interpolation attribute:</label>
+            <input class="form-control" id="interpolation_attribute" name="interpolation_attribute" ng-model="inter.interpolation_attribute" type="text" required>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group" terrama2-show-errors>
+            <label>Number of neighbors:</label>
+            <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="inter.metadata.number_of_neighbors" type="number" required>
+          </div>
+        </div>
+      </div>
+    
+      <div class="col-md-12">
+        <div class="col-md-6" ng-if="inter.interpolator_strategy == 3">
+          <div>
+            <div class="form-group" terrama2-show-errors>
+              <label>Power factor:</label>
+              <input class="form-control" id="power_factor" name="power_factor" ng-model="inter.metadata.power_factor" type="number" ng-required="inter.interpolator_strategy == 3">
+            </div>
+          </div>
+        </div>
+      </div>
+    </terrama2-box>    
+
+    <terrama2-box title="i18n.__('Area')" css="cssBoxSolid">
+      <div class="col-md-12 no-padding">
         <div class="col-md-12">
-          <label>lower_left_corner</label>
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>
+              <label>X min:</label>
+              <input class="form-control" id="llx" name="llx" ng-model="bounding_rect.ll_corner.x" type="number" required>
+            </div>          
+          </div>
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>
+              <label>X max:</label>
+              <input class="form-control" id="urx" name="urx" ng-model="bounding_rect.ur_corner.x" type="number" required>
+            </div>              
+          </div>
         </div>
-        <div class="col-md-6">
-          <label>X ll</label>
-          <input class="form-control" id="llx" name="llx" ng-model="bounding_rect.ll_corner.x" type="number">
-        </div>
-        <div class="col-md-6">
-          <label>Y ll</label>
-          <input class="form-control" id="lly" name="lly" ng-model="bounding_rect.ll_corner.y" type="number">
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="form-group">
         <div class="col-md-12">
-          <label>upper_right_corner</label>
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>
+              <label>Y min:</label>
+              <input class="form-control" id="lly" name="lly" ng-model="bounding_rect.ll_corner.y" type="number" required>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>
+              <label>Y max:</label>
+              <input class="form-control" id="ury" name="ury" ng-model="bounding_rect.ur_corner.y" type="number" required>
+            </div>              
+          </div>
         </div>
-        <div class="col-md-6">
-          <label>X ur</label>
-          <input class="form-control" id="urx" name="urx" ng-model="bounding_rect.ur_corner.x" type="number">
+        <div class="col-md-12">
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>            
+              <label>X resolution:</label>
+              <input class="form-control" id="resolution_x" name="resolution_x" ng-model="inter.resolution_x" type="number" required>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>
+              <label>Y resolution:</label>
+              <input class="form-control" id="resolution_y" name="resolution_y" ng-model="inter.resolution_y" type="number" required>
+            </div>            
+          </div>
         </div>
-        <div class="col-md-6">
-          <label>Y ur</label>
-          <input class="form-control" id="urx" name="ury" ng-model="bounding_rect.ur_corner.y" type="number">
+        <div class="col-md-12">
+          <div class="col-md-6">
+            <div class="form-group" terrama2-show-errors>
+              <label>Projection (SRID):</label>
+              <input class="form-control" id="srid" name="srid" ng-model="inter.srid" type="number" required>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    </terrama2-box>
   </div>
-
-  <div class="col-md-12">
-    <div class="form-group">
-      <div class="col-md-6">
-        <label>interpolation_attribute</label>
-        <input class="form-control" id="interpolation_attribute" name="interpolation_attribute" ng-model="inter.interpolation_attribute" type="text">
-      </div>
-      <div class="col-md-6">
-        <label>srid</label>
-        <input class="form-control" id="srid" name="srid" ng-model="inter.srid" type="number">
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-12">
-    <div class="form-group">
-      <div class="col-md-6">
-        <label>resolution_x</label>
-        <input class="form-control" id="resolution_x" name="resolution_x" ng-model="inter.resolution_x" type="number">
-      </div>
-      <div class="col-md-6">
-        <label>resolution_y</label>
-        <input class="form-control" id="resolution_y" name="resolution_y" ng-model="inter.resolution_y" type="number">
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-12">
-    <div class="form-group">
-      <div class="col-md-6">
-        <label>interpolator_strategy</label>
-        <select class="form-control" name="interpolator_strategy" ng-model="inter.interpolator_strategy">
-          <option value="1">Nearest neighbor</option>
-          <option value="2">Average neighbor</option>
-          <option value="3">Weight average neighbor</option>
-        </select>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-12">
-    <div class="form-group">
-      <div class="col-md-6">
-        <label>number_of_neighbors</label>
-        <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="inter.metadata.number_of_neighbors" type="number">
-      </div>
-      <div class="col-md-6" ng-if="inter.interpolator_strategy == 3">
-        <label>power_factor</label>
-        <input class="form-control" id="power_factor" name="power_factor" ng-model="inter.metadata.power_factor" type="number">
-      </div>
-    </div>
-  </div>
-
 </div>
