--- a/webapp/public/javascripts/angular/interpolator/templates/inter-general.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-general.html
@@ -1,16 +1,16 @@
-<div class="row">
+<div>
   <div class="col-md-12">
     <div class="col-md-5">
       <div class="form-group" terrama2-show-errors>
-        <label for="data_series">data_series_to_interpolate_label</label>
-        <input class="form-control" id="data_series" name="data_series" type="text" disabled ng-model="input_data_series.name">
+        <label for="data_series">Data series to interpolate</label>
+        <input class="form-control" id="data_series" name="data_series" type="text" disabled ng-model="input_data_series.name" required>    
       </div>
     </div>
     <div class="col-md-5">
       <div class="form-group">
         <div class="checkbox">
           <label style="font-weight: 700; margin-top:19px;">
-            <input name="active" ng-model="inter.active" type="checkbox"> active-label
+            <input name="active" ng-model="inter.active" type="checkbox"> Active
           </label>
         </div>
       </div>
@@ -19,8 +19,9 @@
   <div class="col-md-12">
     <div class="col-md-12">
       <div class="form-group" terrama2-show-errors>
-        <label for="name">name_label</label>
-        <input class="form-control" id="name" name="name" ng-model="inter.name" placeholder="Interpolator Name" type="text">
+        <label for="name">Name</label>
+        <input class="form-control" id="name" name="name" ng-model="inter.name" placeholder="Interpolator Name" type="text" required>
+        <label class="help-block text-danger" ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$error.required">Name is required</label>                
       </div>
     </div>
   </div>
@@ -28,7 +29,7 @@
   <div class="col-md-12">
     <div class="col-md-12">
       <div class="form-group" terrama2-show-errors>
-        <label>description_label</label>
+        <label>Description</label>
         <textarea class="form-control" name="description" ng-model="inter.description" rows="3" placeholder="Description"></textarea>
       </div>
     </div>
