--- a/webapp/public/javascripts/angular/interpolator/templates/inter-store.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-store.html
@@ -1,55 +1,67 @@
-<div class="row">
+<div>
   <div class="col-md-12">
     <div class="col-md-4">
-      <label>output_format</label>
-      <select class="form-control"
-              id="data_series_semantics"
-              name="data_series_semantics"
-              ng-options="format.name for format in storagerFormats"
-              ng-model="outputDataSeries.data_series_semantics">
-      </select>
+      <div class="form-group" terrama2-show-errors>
+        <label>Output Format:</label>
+        <select class="form-control"
+                id="data_series_semantics"
+                name="data_series_semantics"
+                ng-change="changeOutputFormat()"
+                ng-options="format.name for format in storagerFormats"
+                ng-model="outputDataSeries.data_series_semantics">
+        </select>
+      </div>
     </div>
     <div class="col-md-4">
-      <label>data_store</label>
-      <select class="form-control" 
-              id="data_store"
-              name="data_store"
-              ng-options="provider.name for provider in providers"
-              ng-model="outputDataSeries.data_provider">
-      </select>
+      <div class="form-group" terrama2-show-errors>
+        <label>Data Store:</label>
+        <select class="form-control" 
+                id="data_store"
+                name="data_store"
+                ng-options="provider.name for provider in providers"
+                ng-model="outputDataSeries.data_provider">
+        </select>
+      </div>
     </div>
     <div class="col-md-4">
-      <label>service_instance</label>
-      <ui-select name="service" ng-model="inter.service_instance_id" required>
-        <ui-select-match>
-          <img ng-src="{{ BASE_URL + 'images/services/alert/alert_service.png'}}" style="height: 20px; margin-top: -7px;"/>
-          <span ng-bind="$select.selected.name"></span>
-        </ui-select-match>
-        <ui-select-choices repeat="instance.id as instance in (filteredServices | filter: {'name': $select.search}) track by instance.id">
-          <img ng-src="{{ BASE_URL + 'images/services/alert/alert_service.png'}}" style="height: 20px;"/>
-          <span ng-bind="instance.name"></span>
-        </ui-select-choices>
-      </ui-select>
+      <div class="form-group" terrama2-show-errors>
+        <label>Service:</label>
+        <ui-select name="service" ng-model="inter.service_instance_id" required>
+          <ui-select-match>
+            <img ng-src="{{ BASE_URL + 'images/services/alert/alert_service.png'}}" style="height: 20px; margin-top: -7px;"/>
+            <span ng-bind="$select.selected.name"></span>
+          </ui-select-match>
+          <ui-select-choices repeat="instance.id as instance in (filteredServices | filter: {'name': $select.search}) track by instance.id">
+            <img ng-src="{{ BASE_URL + 'images/services/alert/alert_service.png'}}" style="height: 20px;"/>
+            <span ng-bind="instance.name"></span>
+          </ui-select-choices>
+        </ui-select>
+      </div>
     </div>
   </div>
   <div class="col-md-12">
-    <label>mask</label>
-    <input class="form-control" id="mask" name="mask" ng-model="outputDataSeries.format.mask" type="text">
+    <div class="col-md-6">
+      <div class="form-group" terrama2-show-errors>
+        <label>Mask:</label>
+        <input class="form-control" id="mask" name="mask" ng-model="outputDataSeries.format.mask" type="text" required>
+      </div>            
+    </div>
+    <div class="col-md-6">
+      <div class="form-group" terrama2-show-errors>
+        <label>Timezone:</label>
+        <select class="form-control" id="timezone" name="timezone" ng-model="outputDataSeries.format.timezone" ng-options="timezone for timezone in timezoneOptions" required></select>
+      </div>            
+    </div>
   </div>
   <div class="col-md-12">
-    <label>srid</label>
-    <input class="form-control" id="srid" name="srid" ng-model="outputDataSeries.format.srid" type="number">
-  </div>
-  <div class="col-md-12">
-    <label>timestamp_property</label>
-    <input class="form-control" id="timestamp_property" name="timestamp_property" ng-model="outputDataSeries.format.timestamp_property" type="text">
-  </div>
-  <div class="col-md-12">
-    <label>timezone</label>
-    <input class="form-control" id="timezone" name="timezone" ng-model="outputDataSeries.format.timezone" type="number">
+    <div class="col-md-6">
+      <div class="form-group" terrama2-show-errors>
+        <label>Projection (SRID):</label>
+        <input class="form-control" id="srid" name="srid" ng-model="outputDataSeries.format.srid" type="number" required>
+      </div>            
+    </div>
   </div>
 </div>
-
 
 <div class="col-md-12" style="margin-top: 30px;">
   <div class="col-md-12">
@@ -64,4 +76,3 @@
     </div>
   </div>
 </div>
-  
