--- a/webapp/public/javascripts/angular/interpolator/templates/wizard.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/wizard.html
@@ -1,4 +1,7 @@
 <div class="row">
+  <div class="col-md-12">
+    <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
+  </div>
   <wizard id="wizard" template="">
       <wz-step wz-title="General">
         <div class="col-md-12">
