--- a/webapp/public/javascripts/angular/interpolator/templates/inter-general.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-general.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <div class="col-md-5">
       <div class="form-group" terrama2-show-errors>
-        <label for="data_series">Data series to interpolate</label>
+        <label for="data_series">{{ i18n.__('Data series to interpolate')}}</label>
         <input class="form-control" id="data_series" name="data_series" type="text" disabled ng-model="input_data_series.name" required>    
       </div>
     </div>
@@ -10,7 +10,7 @@
       <div class="form-group">
         <div class="checkbox">
           <label style="font-weight: 700; margin-top:19px;">
-            <input name="active" ng-model="inter.active" type="checkbox"> Active
+            <input name="active" ng-model="inter.active" type="checkbox"> {{ i18n.__('Active') }}
           </label>
         </div>
       </div>
@@ -19,9 +19,9 @@
   <div class="col-md-12">
     <div class="col-md-12">
       <div class="form-group" terrama2-show-errors>
-        <label for="name">Name</label>
+        <label for="name">{{ i18n.__('Name') }}</label>
         <input class="form-control" id="name" name="name" ng-model="inter.name" placeholder="Interpolator Name" type="text" required>
-        <label class="help-block text-danger" ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$error.required">Name is required</label>                
+        <label class="help-block text-danger" ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$error.required">{{ i18n.__('Name is required') }}</label>                
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@
   <div class="col-md-12">
     <div class="col-md-12">
       <div class="form-group" terrama2-show-errors>
-        <label>Description</label>
+        <label>{{ i18n.__('Description') }}</label>
         <textarea class="form-control" name="description" ng-model="inter.description" rows="3" placeholder="Description"></textarea>
       </div>
     </div>
