--- a/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
@@ -4,11 +4,11 @@
       <div class="col-md-12">
         <div class="col-md-6">
           <div class="form-group" terrama2-show-errors>
-            <label>Interpolator strategy:</label>
+            <label>{{ i18n.__('Interpolator strategy') }}:</label>
             <select class="form-control" name="interpolator_strategy" ng-model="inter.interpolator_strategy" required>
-              <option value="1">Nearest neighbor</option>
-              <option value="2">Average neighbor</option>
-              <option value="3">Weight average neighbor</option>
+              <option value="1">{{ i18n.__('Nearest neighbor') }}</option>
+              <option value="2">{{ i18n.__('Average neighbor') }}</option>
+              <option value="3">{{ i18n.__('Weight average neighbor') }}</option>
             </select>
           </div>
         </div>
@@ -20,13 +20,13 @@
       <div class="col-md-12">
         <div class="col-md-6">
           <div class="form-group" terrama2-show-errors>
-            <label>Interpolation attribute:</label>
+            <label>{{ i18n.__('Interpolation attribute') }}:</label>
             <input class="form-control" id="interpolation_attribute" name="interpolation_attribute" ng-model="inter.interpolation_attribute" type="text" required>
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group" terrama2-show-errors>
-            <label>Number of neighbors:</label>
+            <label>{{ i18n.__('Number of neighbors') }}:</label>
             <input class="form-control" id="number_of_neighbors" name="number_of_neighbors" ng-model="inter.metadata.number_of_neighbors" type="number" required>
           </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="col-md-6" ng-if="inter.interpolator_strategy == 3">
           <div>
             <div class="form-group" terrama2-show-errors>
-              <label>Power factor:</label>
+              <label>{{ i18n.__('Power factor') }}:</label>
               <input class="form-control" id="power_factor" name="power_factor" ng-model="inter.metadata.power_factor" type="number" ng-required="inter.interpolator_strategy == 3">
             </div>
           </div>
@@ -49,13 +49,13 @@
         <div class="col-md-12">
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>
-              <label>X min:</label>
+              <label>{{ i18n.__('X min') }}:</label>
               <input class="form-control" id="llx" name="llx" ng-model="bounding_rect.ll_corner.x" type="number" required>
             </div>          
           </div>
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>
-              <label>X max:</label>
+              <label>{{ i18n.__('X max') }}:</label>
               <input class="form-control" id="urx" name="urx" ng-model="bounding_rect.ur_corner.x" type="number" required>
             </div>              
           </div>
@@ -63,13 +63,13 @@
         <div class="col-md-12">
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>
-              <label>Y min:</label>
+              <label>{{ i18n.__('Y min') }}:</label>
               <input class="form-control" id="lly" name="lly" ng-model="bounding_rect.ll_corner.y" type="number" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>
-              <label>Y max:</label>
+              <label>{{ i18n.__('Y max') }}:</label>
               <input class="form-control" id="ury" name="ury" ng-model="bounding_rect.ur_corner.y" type="number" required>
             </div>              
           </div>
@@ -77,13 +77,13 @@
         <div class="col-md-12">
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>            
-              <label>X resolution:</label>
+              <label>{{ i18n.__('X resolution') }}:</label>
               <input class="form-control" id="resolution_x" name="resolution_x" ng-model="inter.resolution_x" type="number" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>
-              <label>Y resolution:</label>
+              <label>{{ i18n.__('Y resolution') }}:</label>
               <input class="form-control" id="resolution_y" name="resolution_y" ng-model="inter.resolution_y" type="number" required>
             </div>            
           </div>
@@ -91,7 +91,7 @@
         <div class="col-md-12">
           <div class="col-md-6">
             <div class="form-group" terrama2-show-errors>
-              <label>Projection (SRID):</label>
+              <label>{{ i18n.__('Projection (SRID)') }}:</label>
               <input class="form-control" id="srid" name="srid" ng-model="inter.srid" type="number" required>
             </div>
           </div>
