--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -239,7 +239,7 @@
 
           <td ng-disabled class="pull-cell-left">
             <a ng-if="extra.canInterpolate(element)" class="btn btn-default btn-sm" ng-href="{{extra.linkToInterpolate(element)}}">
-              <span class="glyphicon glyphicon-play"></span>
+              <span></span>
               <span class="hidden-xs">Interpolate</span>
             </a>
           </td>
