--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -240,7 +240,7 @@
           <td ng-disabled class="pull-cell-left">
             <a ng-if="extra.canInterpolate(element)" class="btn btn-default btn-sm" ng-href="{{extra.linkToInterpolate(element)}}">
               <span></span>
-              <span class="hidden-xs">Interpolate</span>
+              <span class="hidden-xs">{{ i18n.__("Interpolate") }}</span>
             </a>
           </td>
 
