--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -298,6 +298,8 @@
   <script src="{[ BASE_URL ]}bower_components/i18n-node-angular/i18n-node-angular.js"></script>
   <!-- ng-file-upload -->
   <script src="{[ BASE_URL ]}bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+  <!-- angular-sortable-view -->
+  <script src="{[ BASE_URL ]}bower_components/angular-sortable-view/src/angular-sortable-view.min.js"></script>
   <!-- Socket.io -->
   <script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
 
