--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -124,7 +124,8 @@
         <!-- Angular JS -->
         <script src="{[ BASE_URL ]}bower_components/angular/angular.min.js"></script>
         <script src="{[ BASE_URL ]}bower_components/i18n-node-angular/i18n-node-angular.js"></script>
-
+        <!-- angular-sortable-view -->
+        <script src="{[ BASE_URL ]}bower_components/angular-sortable-view/src/angular-sortable-view.min.js"></script>
         <script type="text/javascript">
           BASE_URL = "{[ BASE_URL ]}";
         </script>
