--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -42,6 +42,8 @@
 <script>
   var configuration = {
     alert: {[ alert|json|safe ]},
+    alertAttachedViews: {[ alertAttachedViews|json|safe ]},
+    views: {[ views|json|safe ]},
     disablePDF: {[ disablePDF ]},
     hasProjectPermission: {[ hasProjectPermission|json|safe ]}
   };
@@ -498,7 +500,7 @@
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
-            <button type="button" class="btn btn-primary pull-right" style="margin: 0 9px 10px 0;" ng-click="ctrl.newAttachedView()"><i class="fa fa-plus"></i></button>
+            <button type="button" class="btn btn-primary pull-right" style="margin: 0 9px 10px 0;" ng-click="ctrl.newAttachedView()" ng-disabled="ctrl.viewsToAttach.length === 0"><i class="fa fa-plus"></i></button>
             <table class="table table-striped" id="attachedViewsTable">
               <tbody ng-if="ctrl.attachedViews.length === 0">
                 <tr>
