creating the select

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -130,9 +130,18 @@
 
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
-            {% if (activeProject.name) %}
-              <li class="header" style="font-size:18px;font-weight: bold;">{[ activeProject.name ]}</li>
-            {% endif %}
+            <select class="form-control" id="projects" onchange="location = '{[ BASE_URL ]}configuration/projects/' + this.value + '/activate';">
+              {% if (!activeProject.id) %}
+                <option ng-bind="i18n.__('Select a Project')"></option>
+              {% endif %}
+              {% for cachedProject in cachedProjects %}
+                {% if (activeProject.id && activeProject.id === cachedProject.id) %}
+                  <option value="{[ cachedProject.name ]}" selected>{[ cachedProject.name ]}</option>
+                {% else %}
+                  <option value="{[ cachedProject.name ]}">{[ cachedProject.name ]}</option>
+                {% endif %}
+              {% endfor %}
+            </select>
             <li class="treeview {% if (tabActive === 'projects') %} active {% endif %}">
               <a href="{[ BASE_URL ]}configuration/projects">
                 <i class="fa fa-sitemap"></i><span ng-bind="i18n.__('Projects')"></span>
