--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -669,3 +669,20 @@ table.dataTable tbody th, table.dataTable tbody td { padding-left: 12px !importa
   width: 60px;
   margin-top: 25%;
 }
+
+#projects {
+  color: #4b646f;
+  background: #1a2226;
+  border: none;
+  width: 100%;
+  height: 44px;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 25px 10px 15px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background-image: url(../images/arrow-down.png);
+  background-size: 17px;
+  background-repeat: no-repeat;
+  background-position: 204px 14px;
+}
