--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -45,7 +45,8 @@
     alertAttachedViews: {[ alertAttachedViews|json|safe ]},
     views: {[ views|json|safe ]},
     disablePDF: {[ disablePDF ]},
-    hasProjectPermission: {[ hasProjectPermission|json|safe ]}
+    hasProjectPermission: {[ hasProjectPermission|json|safe ]},
+    activeProject: {[ activeProject|json|safe ]}
   };
 
   var globals = {};
@@ -500,25 +501,31 @@
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
-            <button type="button" class="btn btn-primary pull-right" style="margin: 0 9px 10px 0;" ng-click="ctrl.newAttachedView()" ng-disabled="ctrl.viewsToAttach.length === 0"><i class="fa fa-plus"></i></button>
+            <button type="button" class="btn btn-primary pull-right" ng-click="ctrl.newAttachedView()" id="newAttachedViewBtn" ng-disabled="ctrl.viewsToAttach.length === 0"><i class="fa fa-plus"></i></button>
             <table class="table table-striped" id="attachedViewsTable">
               <tbody ng-if="ctrl.attachedViews.length === 0">
                 <tr>
-                  <td colspan="3" style="text-align: center; font-weight: 900;">No view attached.</td>
+                  <td colspan="3" id="noViewsAttached" ng-bind="i18n.__('No view attached.')"></td>
                 </tr>
               </tbody>
               <tbody ng-if="ctrl.attachedViews.length > 0" sv-root sv-part="ctrl.attachedViews" sv-on-start="ctrl.startSort($item, $part, $index, $helper)">
-                <tr ng-repeat="attachedView in ctrl.attachedViews" sv-element>
-                  <td style="width: 34px; font-size: 24px; cursor: move;" sv-handle>
-                    <i class="fa fa-arrows-v" style="margin-left: 5px;"></i>
+                <tr ng-repeat="attachedView in ctrl.attachedViews" ng-if="ctrl.attachedViews.length === 1">
+                  <td class="buttonTd"></td>
+                  <td id="alertView" ng-bind="ctrl.alert.name"></td>
+                  <td class="buttonTd"></td>
+                </tr>
+                <tr ng-repeat="attachedView in ctrl.attachedViews" ng-if="ctrl.attachedViews.length > 1" sv-element>
+                  <td class="buttonTd sortHandle" sv-handle>
+                    <i class="fa fa-arrows-v"></i>
                   </td>
-                  <td>
+                  <td ng-if="attachedView._id === 'alertView'" id="alertView" ng-bind="ctrl.alert.name"></td>
+                  <td ng-if="attachedView._id !== 'alertView'">
                     <select id="{{ attachedView._id }}" class="form-control" ng-model="attachedView.view" ng-change="ctrl.selectAttachedView(this)">
                       <option ng-repeat="view in ctrl.viewsToAttach" value="{{ view.id }}" ng-if="view.id !== ctrl.alert.view.id">{{ view.name }}</option>
                     </select>
                   </td>
-                  <td style="width: 34px;">
-                    <button type="button" class="btn btn-danger" ng-click="ctrl.removeAttachedView(attachedView._id)"><i class="fa fa-trash"></i></button>
+                  <td class="buttonTd">
+                    <button type="button" class="btn btn-danger" ng-click="ctrl.removeAttachedView(attachedView._id)" ng-if="attachedView._id !== 'alertView'"><i class="fa fa-trash"></i></button>
                   </td>
                 </tr>
               </tbody>
