--- a/webapp/views/configuration/status.html
+++ b/webapp/views/configuration/status.html
@@ -26,7 +26,7 @@
 </script>
 
 <!-- Moment JS -->
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/moment.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/moment/moment.js"></script>
 
 {% endblock %}
 
