--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -6,18 +6,18 @@
     <link rel="shortcut icon" href="{[ BASE_URL ]}favicon.ico" type="image/x-icon" />
     <title>TerraMA² Monitor</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}AdminLTE/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}AdminLTE/dist/css/skins/skin-black.min.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}openlayers/ol.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}TerraMA2WebComponents.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/admin-lte/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/admin-lte/dist/css/skins/skin-black.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/openlayers/ol.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/TerraMA2WebComponents/TerraMA2WebComponents.min.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}jquery-ui/themes/base/jquery-ui.min.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}datatables/media/css/dataTables.bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bootstrap-daterangepicker/daterangepicker.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/datatables/media/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
   </head>
   <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
@@ -279,18 +279,17 @@
       <div id="realizacao-image"></div>
       <p style="margin-top: 40px;"><span>Plataforma digital para monitoramento e alerta de fogo na vegeta&ccedil;&atilde;o no Cerrado brasileiro (Banco Mundial TF018566)</span></p>
     </div>
-    <script type="text/javascript" src="{[ BASE_URL ]}moment/moment.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}jquery-ui/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}bootstrap-daterangepicker/daterangepicker.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}openlayers/ol.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/moment/moment.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/jquery-ui/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/openlayers/ol.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}datatables/media/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}datatables/media/js/dataTables.bootstrap.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}underscore/underscore-min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}AdminLTE/dist/js/app.min.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/underscore/underscore-min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/admin-lte/dist/js/app.min.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
     <script>
       var BASE_URL = "{[ BASE_URL ]}";
       var webadminHostInfo = {[webadminHostInfo|json|safe]};
@@ -298,7 +297,7 @@
       var message = "{[message.content]}";
     </script>
     <script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>
-    <!--<script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}require.js"></script>-->
+    <!--<script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}externals/requirejs/require.js"></script>-->
     <iframe id="exportation-iframe" class="hidden"></iframe>
   </body>
 </html>
