--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -217,6 +217,10 @@ body, html {
   font-weight: bold;
 }
 
+.terrama2-min-padding {
+  padding-right: 5px !important;
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none;
 }
