--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -284,13 +284,13 @@
           </div>
           <span ng-repeat="level in ctrl.legendModel.levels track by $index">
             <div class="col-md-12 row">
-              <div ng-class="{'col-md-6 terrama2-min-paddind': !ctrl.alert.hasView, 'col-md-4 terrama2-min-padding': ctrl.alert.hasView}">
+              <div ng-class="{'col-md-6 terrama2-min-padding': !ctrl.alert.hasView, 'col-md-4 terrama2-min-padding': ctrl.alert.hasView}">
                 <div class="form-group" ng-class="{'has-error': ctrl.legendLevelNameError[level._id]}">
                   <label><span ng-bind="i18n.__(level.isDefault ? 'Default Level Name' : 'Level Name')"></span>:</label>
                   <input class="form-control" name="levelName{{ level._id }}" ng-model="level.name" type="text" placeholder="{{ i18n.__('Level Name') }}">
                 </div>
               </div>
-              <div ng-class="{'col-md-5 terrama2-min-paddind': !ctrl.alert.hasView, 'col-md-3 terrama2-min-padding': ctrl.alert.hasView}">
+              <div ng-class="{'col-md-5 terrama2-min-padding': !ctrl.alert.hasView, 'col-md-3 terrama2-min-padding': ctrl.alert.hasView}">
                 <div ng-show="!level.isDefault" class="form-group" ng-class="{'has-error': ctrl.legendLevelValueError[level._id] || ctrl.legendLevelOrderError}">
                   <label><span ng-bind="i18n.__('Legend Value')"></span>:</label>
                   <input class="form-control" name="levelValue{{ level._id }}" ng-model="level.value" type="number" placeholder="{{ i18n.__('Legend Value') }}">
@@ -309,7 +309,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-1 terrama2-min-paddind">
+              <div class="col-md-1 terrama2-min-padding">
                 <div ng-show="!level.isDefault" class="form-group">
                   <button type="button" class="btn btn-primary" ng-click="ctrl.removeLevel(level)" style="margin-top: 25px;" ng-show="ctrl.legendModel.levels.length > 1"><span>&times</span></button>
                 </div>
