--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -204,7 +204,7 @@
                   extra="{disabled: !ctrl.hasStyle}">
       <form name="forms.styleForm" novalidate ng-if="ctrl.hasStyle">
         <!-- Vectorial -->
-        <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" model="ctrl.legend"></terrama2-style-legend>
+        <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" columns-list="ctrl.columnsList" model="ctrl.legend"></terrama2-style-legend>
       </form>
     </terrama2-box>
 
