Hide img element when href is empty

--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -117,6 +117,10 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
   margin-top: 50px
 }
 
+img[src=""] {
+  display: none;
+}
+
 .full_screen .main-header .logo {
   width: 50px;
   position: absolute;
